two sections and font

--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,40 @@
   <link rel="stylesheet" href="./styles/style.css">
 </head>
 <body>
-  Error win!
+  <header class="header">
+    <div class="container">
+      <div class="header__wrapper">
+        <a href="#" class="logotype">
+          <img src="./images/icons/Error%20win.svg" alt="">
+        </a>
+      </div>
+      <div class="header__inner">
+        <img src="./images/lampa.png" alt="">
+        <h1 class="title title--level_h1">
+          Управление умным домом языком жестов
+        </h1>
+      </div>
+    </div>
+  </header>
+  <section class="first-screen">
+    <div class="container">
+      <div class="first-screen__wrapper">
+        <div class="tale">
+          <div class="tale__name">Наша технология позволяет управлять умным домом с помощью языка жестов.</div>
+          <p class="tale__text">Пользователь подключает свой аккаунт с умными устройствами и, показывая жесты, может ими управлять.<br>
+            Бум-бум, тут будет что-то про камеру, пока надо тестить. Вот так вот , да.</p>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section class="try">
+    <div class="container">
+      <div class="try__wrapper">
+        <h2 class="title-title--level_h2"></h2>
+      </div>
+  </div>
+  </section>
+  <footer class="footer"></footer>
 </body>
 </html>
